panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__implicit_conversion__test_converting_int_to_unsigned_long_sign_extends.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/implicit_conversion/test_converting_int_to_unsigned_long_sign_extends.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/implicit_conversion/test_converting_int_to_unsigned_long_sign_extends.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `int` 42)
         (declaration b~3 `unsigned long` (name a~2 `int`)))))

----- stderr -----
