panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__implicit_conversion__test_implicit_ptr_cast.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/implicit_conversion/test_implicit_ptr_cast.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/implicit_conversion/test_implicit_ptr_cast.c"
   (function-definition
      const_can_be_added~0 `fn() -> ptr<int const>`
      (compound-statement
         (declaration p~2 `ptr<int>` ∅)
         (return (name p~2 `ptr<int>`))))
   (function-definition
      cast_between_completely_different_ptr_types~3 `fn() -> ptr<ptr<char>>`
      (compound-statement
         (declaration p~5 `ptr<int>` ∅)
         (return (name p~5 `ptr<int>`)))))

----- stderr -----
